--- a/site/Makefile
+++ b/site/Makefile
@@ -1,5 +1,7 @@
-PY?=/www/python
-PELICAN?=pelican
+ENV=$(CURDIR)/../../.env/bin
+PY?=$(ENV)/python
+PELICAN?=$(ENV)/pelican
+GHP_IMPORT?=$(ENV)/ghp-import
 PELICANOPTS=
 
 BASEDIR=$(CURDIR)
@@ -12,10 +14,10 @@ FTP_HOST=localhost
 FTP_USER=anonymous
 FTP_TARGET_DIR=/
 
-SSH_HOST=qnub.me
+SSH_HOST=localhost
 SSH_PORT=22
-SSH_USER=gikme
-SSH_TARGET_DIR=/home/gikme/pelican_site
+SSH_USER=root
+SSH_TARGET_DIR=/var/www
 
 S3_BUCKET=my_s3_bucket
 
@@ -25,7 +27,7 @@ CLOUDFILES_CONTAINER=my_cloudfiles_container
 
 DROPBOX_DIR=~/Dropbox/Public/
 
-GITHUB_PAGES_BRANCH=gh-pages
+GITHUB_PAGES_BRANCH=master
 
 DEBUG ?= 0
 ifeq ($(DEBUG), 1)
@@ -104,7 +106,7 @@ cf_upload: publish
 	cd $(OUTPUTDIR) && swift -v -A https://auth.api.rackspacecloud.com/v1.0 -U $(CLOUDFILES_USERNAME) -K $(CLOUDFILES_API_KEY) upload -c $(CLOUDFILES_CONTAINER) .
 
 github: publish
-	ghp-import -m "Generate Pelican site" -b $(GITHUB_PAGES_BRANCH) $(OUTPUTDIR)
+	$(GHP_IMPORT) -m "Generate Pelican site" -b $(GITHUB_PAGES_BRANCH) $(OUTPUTDIR)
 	git push origin $(GITHUB_PAGES_BRANCH)
 
 .PHONY: html help clean regenerate serve devserver publish ssh_upload rsync_upload dropbox_upload ftp_upload s3_upload cf_upload github
