--- a/.editorconfig
+++ b/.editorconfig
@@ -5,39 +5,16 @@ root = true
 
 [*]
 charset = "utf8"
-
-
-[*.css]
-indent_style = space
-indent_size = 4
-trim_trailing_whitespace = true
-
-
-[*.html]
-indent_style = space
-indent_size = 4
-trim_trailing_whitespace = true
-
-
-[*.jade]
-indent_style = space
-indent_size = 4
-trim_trailing_whitespace = false
-
-
-[*.md]
-indent_style = space
-indent_size = 4
-trim_trailing_whitespace = false
-
-
-[*.js]
 indent_style = space
 indent_size = 2
 trim_trailing_whitespace = true
 
-
-[*.json]
+[*.{css,html,json,styl}]
 indent_style = space
 indent_size = 4
 trim_trailing_whitespace = true
+
+[*.{jade,md}]
+indent_style = space
+indent_size = 4
+trim_trailing_whitespace = false
