Fix RSS generator

--- a/.editorconfig
+++ b/.editorconfig
@@ -9,7 +9,7 @@ indent_style = space
 indent_size = 2
 trim_trailing_whitespace = true
 
-[*.{css,html,json,styl}]
+[*.{css,html,json,styl,py}]
 indent_style = space
 indent_size = 4
 trim_trailing_whitespace = true
